fix broken styles

--- a/wp-content/themes/gca-intranet-foundation/assets/scss/_breadcrumbs.scss
+++ b/wp-content/themes/gca-intranet-foundation/assets/scss/_breadcrumbs.scss
@@ -30,3 +30,9 @@
     transform: translateY(-50%) rotate(45deg);
     width: 0.3em;
 }
+
+@media (max-width: 1030px) {
+    .govuk-breadcrumbs__list {
+        padding: 0 10px;
+    }
+}
